# Tredo

./: .gitignore  Build.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  Research.md  TEST_REPORT.md  install.sh  move_files.py  query_db.py  run_paper_8h.sh  symlink.py  test.md  tredo
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
config/: README.md  tredo.env  tredo.env.example  watchlist.yaml
crates/tredo-agents/: Cargo.toml
crates/tredo-agents/src/: lib.rs
crates/tredo-agents/src/main_agents/: execution_coordinator.rs  market_intelligence.rs  mod.rs  portfolio_manager.rs  reflector.rs  risk_psychology.rs  strategy_decision.rs
crates/tredo-agents/src/sub_agents/: confluence_scorer.rs  drawdown_monitor.rs  mod.rs  outcome_logger.rs  overtrading_preventer.rs  pattern_retriever.rs  pivot_calculator.rs  red_folder_checker.rs  risk_calculator.rs  session_timer.rs
crates/tredo-autonomous/: Cargo.toml  README.md
crates/tredo-autonomous/src/: backtester.rs  behavioral_psychology.rs  circuit_breaker.rs  confluence_scorer.rs  correlation_checker.rs  debate.rs  debate_layer.rs  debate_orchestrator.rs  deterministic_strategies.rs  drawdown_monitor.rs  episode_store.rs  execution_coordinator.rs  execution_coordinator_fsm.rs  funding_rate.rs  hard_rules_gate.rs  helpers.rs  lib.rs  liquidity.rs  live_order_manager.rs  market_intelligence.rs  market_metrics_meter.rs  meta_control.rs  news_analyser.rs  on_chain_data.rs  options_surface.rs  orchestrator_phases.rs  orchestrator_pipeline.rs  orchestrator_struct.rs  order_flow.rs  outcome_logger.rs  outcome_processor.rs  overtrading_preventer.rs  pattern_retriever.rs  pipeline_runner.rs  pivot_calculator.rs  portfolio_manager.rs  reconciliation_engine.rs  red_folder_checker.rs  reflector.rs  regime_classifier.rs  (+20 more)
crates/tredo-autonomous/tests/: debug_100_trades.rs  five_layer_pipeline_integration.rs  no_kronos_no_llm_pipeline.rs  paper_trading_integration.rs  rule_revert_test.rs  tredo_integration.rs
crates/tredo-broker-5paisa/: Cargo.toml
crates/tredo-broker-5paisa/src/: lib.rs
crates/tredo-broker-alpaca/: Cargo.toml  README.md
crates/tredo-broker-alpaca/src/: lib.rs
crates/tredo-broker-angelone/: Cargo.toml
crates/tredo-broker-angelone/src/: lib.rs
crates/tredo-broker-binance/: Cargo.toml
crates/tredo-broker-binance/src/: lib.rs
crates/tredo-broker-upstox/: Cargo.toml
crates/tredo-broker-upstox/src/: lib.rs
crates/tredo-broker-zerodha/: Cargo.toml  README.md
crates/tredo-broker-zerodha/src/: lib.rs
crates/tredo-compliance/: Cargo.toml  compliance.default.toml
crates/tredo-compliance/src/: main.rs
crates/tredo-core/: Cargo.toml  README.md
crates/tredo-core/src/: advanced_patterns.rs  agent.rs  agentmemory.rs  backtest.rs  binance.rs  broker.rs  calendar.rs  circuit_breaker.rs  config.rs  disciplined_core.rs  episode.rs  execution.rs  goals.rs  graph_rag.rs  kronos_client.rs  lib.rs  live_calendar.rs  llm.rs  logging.rs  memory.rs  messages.rs  news.rs  notifier.rs  options.rs  paper_engine.rs  patterns.rs  portfolio_analytics.rs  role.rs  service_manager.rs  skill_aggregator.rs  skills.rs  vector_memory.rs
crates/tredo-core/tests/: paper_engine_tests.rs
crates/tredo-eventbus/: Cargo.toml
crates/tredo-eventbus/src/: lib.rs
crates/tredo-market-data/: Cargo.toml
crates/tredo-market-data/src/: main.rs
crates/tredo-metrics/: Cargo.toml
crates/tredo-metrics/src/: main.rs
crates/tredo-orchestrator/: Cargo.toml  README.md
crates/tredo-orchestrator/src/: loops.rs  main.rs
crates/tredo-runtime/: Cargo.toml  README.md
crates/tredo-runtime/src/: active_learner.rs  api_clients.rs  backtest_feed.rs  data_feed.rs  engine.rs  event_bus.rs  goal_manager.rs  introspector.rs  lib.rs  live_broker.rs  mode.rs  paper_broker.rs  policy_cache.rs  portfolio_reasoner.rs  resilient_pipeline.rs  risk_manager.rs  strategy.rs  streaming_reasoner.rs  world_model.rs
crates/tredo-runtime/src/broker/: mod.rs  plugin_registry.rs  sandbox.rs
crates/tredo-runtime/tests/: smoke_test.rs
crates/tredo-server/: Cargo.toml  README.md
crates/tredo-server/src/: main.rs
crates/tredo-tui/: Cargo.toml  README.md
crates/tredo-tui/src/: backtest.rs  broker.rs  cot.rs  dashboard.rs  health.rs  help.rs  main.rs  models.rs  performance.rs  policy_cache.rs  positions.rs  prelude.rs  rules.rs  scanner.rs  settings.rs  tree.rs  ui.rs  watchlist.rs  ws_client.rs
crates/tredo-watchdog/: Cargo.toml
crates/tredo-watchdog/src/: main.rs
docs/: AGENTIC_ARCHITECTURE_V2.md  AGENT_DESIGN.md  DISCIPLINED_CORE.md  ENGINEERING_LOOP_PLAN.md  INDICATOR_INVENTORY.md  ROADMAP.md  SYSTEM_OBSERVATION.md  tredo_LOW_RESOURCE_ARCHITECTURE.md
docs/research-2026/: agentic-trading-autonomous-production-blueprint-2026.docx  agentic-trading-autonomous-production-blueprint-2026.md  agentic-trading-research-2026.docx  agentic-trading-research-2026.md  generate_production_blueprint.py  generate_reports.py  remaining-implementation-blueprint-2026.md  self-evolving-agentic-ai-trading-systems-2026.md
docs/skills/: tredo-exchange-design.md
kronos_service/: README.md  download.py  main.py  model.py  requirements.txt  tool.py
research/: agentic-trading-autonomous-production-blueprint-2026.md  agentic-trading-research-2026.md  generate_self_evolving_reports.py  remaining-implementation-blueprint-2026.md  self-evolving-agentic-ai-trading-intact-blueprint-2026.docx
scripts/: com.tredo.orchestrator.plist  install_service.sh  seed-design-memory.sh  start_orchestrator.sh  tredo-orchestrator.service
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/frontend/: app.js  index.html  style.css
src-tauri/src/: main.rs
