[workspace]
resolver = "2"

members = [
    "crates/tredo-core",
    "crates/tredo-orchestrator",
    "crates/tredo-autonomous",
    "crates/tredo-server",
    "src-tauri",
    "crates/tredo-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "TREDO — Trading Real-time Edge Decision Optimisation. A production-grade, Rust-first autonomous agentic trading co-pilot with multi-agent debate, hierarchical memory, self-evolution, and a powerful Terminal UI."
authors = ["craaraju-ctrl"]
repository = "https://github.com/craaraju-ctrl/Tredo"
homepage = "https://github.com/craaraju-ctrl/Tredo"
readme = "README.md"