[package]
name = "tredo-tauri"
version = "0.1.0"
edition = "2021"
description = "tredo — Trading Real-time Edge Decision Optimisation (Tauri secondary UI, paper-only)"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.11", features = ["json"] }

# tredo Core + Agents integration (rebranded)
tredo-core = { path = "../crates/tredo-core" }
tredo-agents = { path = "../crates/tredo-agents" }
tredo-autonomous = { path = "../crates/tredo-autonomous" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "tredo-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = "2"