[package]
name = "tredo-tauri"
version.workspace = true
edition.workspace = true
description = "tredo — Trading Real-time Edge Decision Optimisation (Tauri secondary UI, paper-only)"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { workspace = true }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.11", features = ["json"] }

# tredo Core + Agents integration
tredo-core = { path = "../crates/tredo-core" }
tredo-autonomous = { path = "../crates/tredo-autonomous" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
lancedb = ["tredo-core/lancedb"]

[[bin]]
name = "tredo-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = "2"
