[package]
name = "tredo-agents"
version = "0.1.0"
description = "tredo-agents (DEPRECATED SHIM — do not use for new work. Real implementation lives in tredo-autonomous + tredo-core. Kept only for backward compatibility in orchestrator.)"
edition = "2021"

[dependencies]
tredo-core = { path = "../tredo-core" }
tredo-autonomous = { path = "../tredo-autonomous" }
async-trait = "0.1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }