[package]
name = "tredo-agents"
version.workspace = true
description = "tredo-agents (DEPRECATED SHIM — do not use for new work. Real implementation lives in tredo-autonomous + tredo-core. Kept only for backward compatibility in orchestrator.)"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
tredo-core = { path = "../tredo-core" }
tredo-autonomous = { path = "../tredo-autonomous" }
async-trait = "0.1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }