[package]
name = "tredo-autonomous"
version.workspace = true
description = "tredo-autonomous — Tredo agent hierarchy, debate, skills, temporal pipeline (Trading Real-time Edge Decision Optimisation)"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[features]
lancedb = ["tredo-core/lancedb"]

[[bin]]
name = "tredo-cli"
path = "src/bin/tredo_cli.rs"

[dependencies]
tredo-core = { path = "../tredo-core", features = ["lancedb"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
chrono = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
reqwest = { version = "0.11", features = ["json"] }
