[package]
name = "tredo-broker-5paisa"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "5Paisa Xstream API broker adapter for TREDO — free Indian discount broker via 5Paisa REST API (OAuth2 auth)"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
tredo-core = { path = "../tredo-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
thiserror = "2.0"

[features]
lancedb = ["tredo-core/lancedb"]
