[package]
name = "tredo-broker-binance"
version = "0.2.0"
edition = "2021"
description = "Binance broker adapter with HMAC-SHA256 signed order placement and WebSocket fill confirmations"

[dependencies]
async-trait = "0.1"
chrono = { workspace = true }
hex = "0.4"
hmac = "0.12"
reqwest = "0.11"
serde = "1"
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync", "time", "net"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tracing = "0.1"
tredo-core = { path = "../tredo-core" }
url = "2"
