[package]
name = "tredo-broker-upstox"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Upstox API v2 broker adapter for TREDO — free Indian discount broker via Upstox REST API (OAuth2 auth)"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
tredo-core = { path = "../tredo-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
thiserror = "2.0"

[features]
lancedb = ["tredo-core/lancedb"]
