[package]
name = "tredo-broker-zerodha"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zerodha Kite Connect v3 live broker adapter for TREDO — real-money trading via the Kite API"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
tredo-core = { path = "../tredo-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
thiserror = "1.0"
