[package]
name = "tredo-compliance"
version.workspace = true
description = "tredo-compliance — Pre-trade compliance gateway. Separate binary that validates every order against parameterized rules before execution."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
