[package]
name = "tredo-eventbus"
version.workspace = true
description = "tredo-eventbus — Microservices event bus with NATS pub-sub and in-memory fallback"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { workspace = true }
async-nats = "0.37"
bytes = "1"
futures = "0.3"
tracing = "0.1"
