[package]
name = "tredo-metrics"
version.workspace = true
description = "tredo-metrics — Performance monitoring, Prometheus endpoint, alert engine, and weekly reports"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
axum = { version = "0.7", features = ["macros"] }
chrono = { workspace = true }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
