[package]
name = "tredo-orchestrator"
version = "0.1.0"
description = "tredo-orchestrator — Autonomous brain + HTTP API + loops (primary backend for tredo Terminal UI)"
edition = "2021"

[dependencies]
tredo-core = { path = "../tredo-core" }
tredo-agents = { path = "../tredo-agents" }
tredo-autonomous = { path = "../tredo-autonomous" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }