[package]
name = "tredo-orchestrator"
version.workspace = true
description = "tredo-orchestrator — Autonomous brain + HTTP API + loops (primary backend for tredo Terminal UI)"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
tredo-core = { path = "../tredo-core" }
tredo-autonomous = { path = "../tredo-autonomous" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }