[package]
name = "tredo-server"
version.workspace = true
description = "tredo-server (optional production server)"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tredo-core = { path = "../tredo-core" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
tower = "0.4"
futures = "0.3"
