[package]
name = "tredo-tui"
version = "0.1.0"
edition = "2021"
description = "tredo — Full Terminal UI (ratatui) for Trading Real-time Edge Decision Optimisation. The primary beautiful interface for the autonomous co-pilot."
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
futures = "0.3"

[[bin]]
name = "tredo-tui"
path = "src/main.rs"